login forntend fixed

--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
                         <h2>Login in to your Account</h2>
                         <span>Enter the company directory and explore information and collaboration.</span>
                     </div>
-                    <form class="login__right-form">
+                    <form class="login__right-form" id="form">
                         <label for="user">User:</label>
                         <div class="input-container">
                             <input class="login-input" type="email" id="userLogin" name="email" placeholder="Enter your email as a user" required ><br><br>
@@ -50,6 +50,7 @@
     </main>
 
 
-    <script type="module" src="./assets/js/login.js"></script>
+    <!-- <script src="./assets/js/login/inputsValidation.js"></script> -->
+    <script type="module" src="./assets/js/login/login.js"></script>
 </body>
 </html>
