--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
                         </div>
                     
                         <label for="password">Password:</label>
-                        <div class="input-container">
+                        <div class="input-container input-container-password ">
                             <span class="input-icon"><i class='bx bx-show' id="showPassword"></i></span>
                             <input class="login-input " type="password" id="passwordLogin" name="password" placeholder="Enter your password..." required><br><br>
                             <span class="input-icon-left"><i class='bx bx-lock' ></i></span>
