--- a/index.html
+++ b/index.html
@@ -347,12 +347,12 @@
             <section class="managers"></section>
         </main>
     </div>
-    <script src="../assets/js/validationModalForm.js"></script>
-    <script src="../assets/js/navbar.js"></script>
-    <script src="../assets/js/directory.js"></script>
-    <script src="../assets/js/chnageTheme.js"></script>
-    <script src="../assets/js/addNewUser.js" type="module"></script>
+    <script src="./assets/js/dashboard/validationModalForm.js"></script>
+    <script src="./assets/js/sidebar/navbar.js"></script>
+    <script src="./assets/js/sidebar/directory.js"></script>
+    <script src="./assets/js/dashboard/chnageTheme.js"></script>
+    <script src="./assets/js/dashboard/addNewUser.js" type="module"></script>
     <!-- <script src="./assets/js/detailCard.js"></script> -->
-    <script src="../assets/js/conection.js"></script>
+    <!-- <script src="../assets/js/conection.js"></script> -->
 </body>
 </html>
