--- a/login.html
+++ b/login.html
@@ -44,7 +44,7 @@
                     <div class="login__bottom">
                         <div class="login__bottom-data">
                             <div class="login__data-line"></div>
-                            <p>If you don't have an account, please <span>contact</span> the IT department</p>
+                            <p class="login_data-text">If you don't have an account, please <span>contact</span> the IT department</p>
                         </div>
                     </div>
                 </div>
