--- a/login.html
+++ b/login.html
@@ -38,8 +38,10 @@
                                 
                             </div>
                         </div>
-                    
-                        <input id="btnLogin" class="login-btn" type="submit" value="Login">
+                        <div class="form-btn-container">
+                            <input id="btnLogin" class="login-btn" type="submit" value="Login">
+                            <div class="circle-loader"></div>
+                        </div>
                     </form>
                     <div class="login__bottom">
                         <div class="login__bottom-data">
