--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
     <div class="home_content">
         <main>
-            <section class="dashboard"></section>
+            <section id="dashboardSec" class="dashboard"></section>
             <section class="directory">
                 <div class="background-modal"></div>
                 <div class="directory_container">
@@ -347,11 +347,13 @@
             <section class="managers"></section>
         </main>
     </div>
-    <script src="./assets/js/dashboard/validationModalForm.js"></script>
-    <script src="./assets/js/sidebar/navbar.js"></script>
+    <script type="module" src="./assets/js/generals/authUser.js"></script>
+    <script src="./assets/js/users/admin.js"></script>
     <script src="./assets/js/sidebar/directory.js"></script>
+    <script src="./assets/js/sidebar/navbar.js"></script>
     <script src="./assets/js/dashboard/chnageTheme.js"></script>
-    <script src="./assets/js/dashboard/addNewUser.js" type="module"></script>
+    <!-- <script src="./assets/js/dashboard/validationModalForm.js"></script> -->
+    <!-- <script src="./assets/js/dashboard/addNewUser.js" type="module"></script> -->
     <!-- <script src="./assets/js/detailCard.js"></script> -->
     <!-- <script src="../assets/js/conection.js"></script> -->
 </body>
