--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
                         </div>
                         <div class="form-btn-container">
                             <input id="btnLogin" class="login-btn" type="submit" value="Login">
-                            <div class="circle-loader"></div>
+                            <span class="loader"></span>
                         </div>
                     </form>
                     <div class="login__bottom">
