Modals fixing problems part 1

--- a/index.html
+++ b/index.html
@@ -143,6 +143,80 @@
                             </form>
                         </div>
                     </div>
+                  <!-- <div class="add_newuser-directory">
+                      <h2>Hola mundo modalesco</h2>
+                  </div> -->
+                  <div class="add_newuser-directory">
+                    <div class="add_newuser-content">
+                        <div class="content-img">
+                          <div class="input-container-profile">
+                            <div class="input-content-profile">
+                                <input class="input-file input-modal" type="file" name="profile-picture" id="profile-img" data-type="profilePicture">
+                                <div class="input-cont-sub">
+                                    <span class="bx bx-camera"></span>
+                                </div>
+                                <img class="uploaded-image" id="profileImage" src="#" alt="">
+                            </div>
+                          </div>
+                        </div>
+                        <form class="new_user-form">
+                            <div class="form-content">
+                                <label for="full-name">Full Name:</label>
+                                <div class="input-container">
+                                    <input class="login-input input-modal" type="text" id="full-name" name="full-name" placeholder="Enter full name" required data-type="fullName">
+                                    <span class="input-icon-left"><i class='bx bx-user'></i></span>
+                                </div>
+                            </div>
+                            <div class="form-content">
+                                <label for="position">Position:</label>
+                                <div class="input-container">
+                                    <input class="login-input input-modal" type="text" id="position" name="position" placeholder="Enter position" required data-type="position">
+                                    <span class="input-icon-left"><i class='bx bx-briefcase'></i></span>
+                                </div>
+                            </div>
+                            <div class="form-content">
+                                <label for="department">Department:</label>
+                                <div class="input-container">
+                                    <input class="login-input input-modal" type="text" id="department" name="department" placeholder="Enter department" required data-type="department">
+                                    <span class="input-icon-left"><i class='bx bx-building'></i></span>
+                                </div>
+                            </div>
+                            <div class="form-content">
+                                <label for="phone">Phone Number:</label>
+                                <div class="input-container">
+                                    <input class="login-input input-modal" type="tel" id="phone" name="phone" placeholder="Enter phone number" required data-type="phoneNumber">
+                                    <span class="input-icon-left"><i class='bx bx-phone'></i></span>
+                                </div>
+                            </div>
+                            <div class="form-content">
+                                <label for="ext">Ext Number:</label>
+                                <div class="input-container">
+                                    <input class="login-input input-modal" type="tel" id="ext" name="ext" placeholder="Enter ext number" required data-type="extNumber">
+                                    <span class="input-icon-left"><i class='bx bx-phone'></i></span>
+                                </div>
+                            </div>
+                            <div class="form-content">
+                                <label for="office">Office:</label>
+                                <div class="input-container">
+                                    <input class="login-input input-modal" type="text" id="office" name="office" placeholder="Enter office" required data-type="office">
+                                    <span class="input-icon-left"><i class='bx bx-building'></i></span>
+                                </div>
+                            </div>
+                            <div class="form-content">
+                                <label for="working-hours">Working Hours:</label>
+                                <div class="input-container">
+                                    <input class="login-input input-modal" type="text" id="working-hours" name="working-hours" placeholder="Enter working hours" required data-type="workingHours">
+                                    <span class="input-icon-left"><i class='bx bx-time'></i></span>
+                                </div>
+                            </div>
+                            <div class="input-content">
+                                <button class="btn-modals btn-cancel" id="btnModalFormCancel">Cancel</button>
+                                <button class="btn-modals btn-save" id="btnModalFormSave" type="submit"><i class='bx bx-save'></i><span>Save</span></button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
                 </div>
                 
             </div>
@@ -359,72 +433,6 @@
                                 <button class="pencil-button"><i class='bx bx-pencil'></i></button>
                               </td>
                             </tr>
-                            <tr>
-  <td><input type="checkbox"></td>
-  <td class="user_profile-name">
-    <div class="user_profile-picture-table"></div>
-    <div class="user_data">
-      <h5 class="user_data-name" id="nameTable">James Miller</h5>
-      <span class="user_data-email" id="emailTable">james.miller@agibusinessgroup.com</span>
-    </div>
-  </td>
-  <td class="user_position agent-position"><span>Sales Rep</span></td>
-  <td class="user_department agent-department"><span>Sales</span></td>
-  <td class="user_phone">456-789-0123</td>
-  <td class="user_extension">456</td>
-  <td class="user_office">Downtown</td>
-  <td class="user_working-hours">10:00 AM - 6:00 PM</td>
-  <td>
-    <button class="pencil-button"><i class='bx bx-phone'></i></button>
-    <button class="trash-button"><i class='bx bx-trash'></i></button>
-    <button class="pencil-button"><i class='bx bx-pencil'></i></button>
-  </td>
-</tr>
-<tr>
-  <td><input type="checkbox"></td>
-  <td class="user_profile-name">
-    <div class="user_profile-picture-table"></div>
-    <div class="user_data">
-      <h5 class="user_data-name" id="nameTable">Jessica Adams</h5>
-      <span class="user_data-email" id="emailTable">jessica.adams@agibusinessgroup.com</span>
-    </div>
-  </td>
-  <td class="user_position uw-position"><span>UW Manager</span></td>
-  <td class="user_department uw-department"><span>Underwriting</span></td>
-  <td class="user_phone">789-012-3456</td>
-  <td class="user_extension">789</td>
-  <td class="user_office">Westside</td>
-  <td class="user_working-hours">9:30 AM - 5:30 PM</td>
-  <td>
-    <button class="pencil-button"><i class='bx bx-phone'></i></button>
-    <button class="trash-button"><i class='bx bx-trash'></i></button>
-    <button class="pencil-button"><i class='bx bx-pencil'></i></button>
-  </td>
-</tr>
-<tr>
-  <td><input type="checkbox"></td>
-  <td class="user_profile-name">
-    <div class="user_profile-picture-table"></div>
-    <div class="user_data">
-      <h5 class="user_data-name" id="nameTable">David Johnson</h5>
-      <span class="user_data-email" id="emailTable">david.johnson@agibusinessgroup.com</span>
-    </div>
-  </td>
-  <td class="user_position regional-position"><span>Regional Director</span></td>
-  <td class="user_department regional-department"><span>Regional</span></td>
-  <td class="user_phone">234-567-8901</td>
-  <td class="user_extension">123</td>
-  <td class="user_office">East Region</td>
-  <td class="user_working-hours">8:00 AM - 6:00 PM</td>
-  <td>
-    <button class="pencil-button"><i class='bx bx-phone'></i></button>
-    <button class="trash-button"><i class='bx bx-trash'></i></button>
-    <button class="pencil-button"><i class='bx bx-pencil'></i></button>
-  </td>
-</tr>
-
-
-
                         </tbody>
                     </table>
                 </div>
