--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./assets/css/directory/directory-main.css">
     <link rel="stylesheet" href="./assets/css/generals/search-section.css">
     <link rel="stylesheet" href="./assets/css/generals/paginator.css">
+    <link rel="stylesheet" href="./assets/css/managers/manager.css">
     <!-- <link rel="stylesheet" href="../assets/css/directory/directory-header.css"> -->
     <!-- <link rel="stylesheet" href="../assets/css/directory/directory-body.css"> -->
     <!-- <link rel="stylesheet" href="../assets/css/directory/card-detail.css"> -->
@@ -336,14 +337,14 @@
                                     <span class="user_data-email" id="emailTable">anne.wathsoon@agibussinesgroup.com</span>
                                   </div>
                               </td>
-                              <td class="user_position sales-position"><span>Sales Manager</span></td>
+                              <td class="user_position sales-position"><span>Seller</span></td>
                               <td class="user_department sales-department" ><span>Sales</span></td>
                               <td class="user_phone">123-456-7890</td>
                               <td class="user_extension">123</td>
                               <td class="user_office">Rio Alto</td>
                               <td class="user_working-hours">9:00 AM - 5:00 PM</td>
                               <td>
-                                  <button class="pencil-button"><i class='bx bx-phone'></i></button>
+
                               <button class="trash-button"><i class='bx bx-trash'></i></button>
                               <button class="pencil-button"><i class='bx bx-pencil'></i></button>
                               </td>
@@ -365,7 +366,6 @@
                               <td class="user_office">Downtown Office</td>
                               <td class="user_working-hours">8:30 AM - 4:30 PM</td>
                               <td>
-                                <button class="pencil-button"><i class='bx bx-phone'></i></button>
                                 <button class="trash-button"><i class='bx bx-trash'></i></button>
                                 <button class="pencil-button"><i class='bx bx-pencil'></i></button>
                               </td>
@@ -379,14 +379,13 @@
                                   <span class="user_data-email" id="emailTable">michael.brown@agibusinessgroup.com</span>
                                 </div>
                               </td>
-                              <td class="user_position it-position"><span>IT Specialist</span></td>
+                              <td class="user_position it-position"><span>IT</span></td>
                               <td class="user_department it-department"><span>IT</span></td>
                               <td class="user_phone">555-555-5555</td>
                               <td class="user_extension">567</td>
                               <td class="user_office">Tech Hub</td>
                               <td class="user_working-hours">8:00 AM - 5:00 PM</td>
                               <td>
-                                <button class="pencil-button"><i class='bx bx-phone'></i></button>
                                 <button class="trash-button"><i class='bx bx-trash'></i></button>
                                 <button class="pencil-button"><i class='bx bx-pencil'></i></button>
                               </td>
@@ -400,14 +399,13 @@
                                   <span class="user_data-email" id="emailTable">alex.carter@agibusinessgroup.com</span>
                                 </div>
                               </td>
-                              <td class="user_position noc-position"><span>NOC Analyst</span></td>
+                              <td class="user_position noc-position"><span>Analyst</span></td>
                               <td class="user_department noc-department"><span>NOC</span></td>
                               <td class="user_phone">555-987-6543</td>
                               <td class="user_extension">234</td>
                               <td class="user_office">Tech Center</td>
                               <td class="user_working-hours">24/7</td>
                               <td>
-                                <button class="pencil-button"><i class='bx bx-phone'></i></button>
                                 <button class="trash-button"><i class='bx bx-trash'></i></button>
                                 <button class="pencil-button"><i class='bx bx-pencil'></i></button>
                               </td>
@@ -421,14 +419,13 @@
                                   <span class="user_data-email" id="emailTable">emily.johnson@agibusinessgroup.com</span>
                                 </div>
                               </td>
-                              <td class="user_position regional-position"><span>Regional Manager</span></td>
+                              <td class="user_position regional-position"><span>Manager</span></td>
                               <td class="user_department regional-department"><span>Regional</span></td>
                               <td class="user_phone">555-123-4567</td>
                               <td class="user_extension">789</td>
                               <td class="user_office">West Region</td>
                               <td class="user_working-hours">9:00 AM - 6:00 PM</td>
                               <td>
-                                <button class="pencil-button"><i class='bx bx-phone'></i></button>
                                 <button class="trash-button"><i class='bx bx-trash'></i></button>
                                 <button class="pencil-button"><i class='bx bx-pencil'></i></button>
                               </td>
@@ -480,6 +477,89 @@
                         </div>
                     </div>
                 </header>
+                <div class="search-bar">
+                    <div class="search-content">
+                        <div class="search-container">
+                          <i class="bx bx-search"></i>
+                          <input type="text" placeholder="Search" class="search-input">
+                        </div>
+                        <div class="filter-container">
+                            <div class="filter-dropdown" id="filterDropdown">
+                                <button class="filter-button">
+                                  <span class="filter-button-text">Filter</span>
+                                  <i class="bx bx-filter"></i>
+                                </button>
+                                <div class="filter-options">
+                                  <p>Filtrar por:</p>
+                                  <ul>
+                                    <li><a href="#"><i class="bx bx-building"></i> Department</a></li>
+                                    <li><a href="#"><i class="bx bx-briefcase"></i> Position</a></li>
+                                  </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="btn-add" id="btnNewUserDirectory">
+                        <i class='bx bx-plus plus-btn'></i>
+                      Add new user
+                    </button>
+                </div>
+                <div class="managers_cards-container">
+                    <div class="card">
+                        <div class="card_profile-img">
+                            <div class="card_img-container">
+                              <img class="card_img-data" src="./assets/img/profile-picture/aiony-haust-3TLl_97HNJo-unsplash (1).jpg" alt="Imagen de perfil" class="profile-img">
+                            </div>
+                            <div class="card_profile-info">
+                              <div class="name-card-data">Michael Kors</div>
+                              <div class="card_profile-email">
+                                <i class='bx bx-envelope email-card-icon'></i>
+                                <span class="email-card-data">jmunive@agibussinesgroup.com</span>
+                              </div>
+                              
+                            </div>
+                        </div>
+                        <div class="card_tags">
+                            <div class="card_tags-position">
+                                <span class="position-card-data">It Manager</span>
+                            </div>
+                            <div class="card_tags-department">
+                                <span class="department-card-data">It Department</span>
+                            </div>
+                        </div>
+                        <div class="card_data">
+                          <div class="card_data-contact">
+                            <div class="card_data-contact-phone">
+                              <i class='bx bx-phone'></i>
+                              <span class="phone-card-data">707245673</span>
+                            </div>
+                            <div class="card_data-contact-ext">
+                              <i class='bx bx-buildings'></i>
+                              <span class="ext-card-data">4003</span>
+                            </div>
+                            <div class="card_data-working-hours">
+                                <i class='bx bx-time-five'></i>
+                                <span class="working-card-data">9:00 AM - 6:00 PM</span>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                  <!-- Agrega más tarjetas aquí -->
+                </div>
+                <div class="paginator">
+                    <div class="paginator-section left-section">
+                      <button class="pagination-button"><i class='bx bx-arrow-back'></i> Previous</button>
+                    </div>
+                    <div class="paginator-section center-section">
+                      <span class="page-number active">1</span>
+                      <span class="page-number">2</span>
+                      <span class="page-number">3</span>
+
+                    </div>
+                    <div class="paginator-section right-section">
+                      <button class="pagination-button">Next<i class='bx bx-right-arrow-alt'></i> </button>
+                    </div>
+                </div>
             </section>
             <!--========================== admin tools ====================== -->
 
