filter card updated

--- a/index.html
+++ b/index.html
@@ -297,10 +297,32 @@
                                   <i class="bx bx-filter"></i>
                                 </button>
                                 <div class="filter-options">
-                                  <p>Filtrar por:</p>
+                                  <p>Filter by:</p>
                                   <ul>
-                                    <li><a href="#"><i class="bx bx-building"></i> Department</a></li>
-                                    <li><a href="#"><i class="bx bx-briefcase"></i> Position</a></li>
+                                    <li>
+                                      <a href="#" class="deparment-filter">
+                                        <i class="bx bx-building"></i>
+                                        <span>Departmen</span>
+                                      </a>
+                                    </li>
+                                    <li>
+                                      <a href="#" class="position-filter">
+                                        <i class="bx bx-briefcase"></i>
+                                        <span>Position</span>
+                                      </a>
+                                    </li>
+                                    <li>
+                                      <a href="#" class="office-filter">
+                                        <i class='bx bx-buildings' ></i>
+                                         <span>Office</span>
+                                      </a>
+                                    </li>
+                                    <li>
+                                      <a href="#" class="close-filter">
+                                        <i class='bx bx-x'></i>
+                                         <span>Close</span>
+                                      </a>
+                                    </li>
                                   </ul>
                                 </div>
                             </div>
@@ -825,7 +847,7 @@
     </div>
     <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js@latest/dist/Chart.min.js"></script> -->
     <!-- <script src="./assets/js/phone-book-app/dashboard/graffic.js"></script> -->
-    <script type="module" src="./assets/js/generals/authUser.js"></script>
+    <!-- <script type="module" src="./assets/js/generals/authUser.js"></script> -->
     <script src="./assets/js/users/admin.js"></script>
     <!-- <script src="./assets/js/phone-book-app/generals/sidebar/directory.js"></script> -->
     <script src="./assets/js/phone-book-app/generals/modals.js"></script>
